<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditStudent">

    <TextView
        android:id="@+id/tvHeading_edit"
        android:layout_width="0pt"
        android:layout_height="wrap_content"
        android:background="#ff00ff"
        android:gravity="center"
        android:text="@string/student_information"
        android:textAllCaps="true"
        android:textColor="#3F51B5"
        android:textSize="13pt"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvId"
        android:layout_width="0pt"
        android:layout_height="wrap_content"
        android:text="@string/id"
        android:textSize="12pt"
        app:layout_constraintBottom_toBottomOf="@+id/edtID"
        app:layout_constraintEnd_toEndOf="@+id/tvName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvHeading_edit" />

    <EditText
        android:id="@+id/edtID"
        android:layout_width="0pt"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvId"
        app:layout_constraintTop_toTopOf="@+id/tvId" />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="0pt"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="12pt"
        app:layout_constraintBottom_toBottomOf="@+id/edtName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvId" />

    <EditText
        android:id="@+id/edtName"
        android:layout_width="0pt"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvName"
        app:layout_constraintTop_toTopOf="@+id/tvName" />

    <TextView
        android:id="@+id/tvPoint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/point"
        android:textSize="12pt"
        app:layout_constraintBottom_toBottomOf="@+id/edtPoint"
        app:layout_constraintEnd_toEndOf="@+id/tvName"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/tvName" />

    <EditText
        android:id="@+id/edtPoint"
        android:layout_width="0pt"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tvPoint"
        app:layout_constraintTop_toTopOf="@+id/tvPoint" />

    <Button
        android:id="@+id/btnExit"
        android:layout_width="0pt"
        android:layout_height="wrap_content"
        android:text="@string/exit"
        android:textSize="13pt"
        app:layout_constraintEnd_toStartOf="@+id/btnSave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtPoint" />

    <Button
        android:id="@+id/btnSave"
        android:layout_width="0pt"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textSize="13pt"
        app:layout_constraintBottom_toBottomOf="@id/btnExit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/btnExit"
        app:layout_constraintTop_toTopOf="@id/btnExit" />

</androidx.constraintlayout.widget.ConstraintLayout>